--- a/pgups/static/css/relay-teams.css
+++ b/pgups/static/css/relay-teams.css
@@ -1,13 +1,16 @@
 .relay-team-list {
-  padding: 10px;
+  padding: 20px;
 }
 
 .relay-team-list--item {
   line-height: 2.5;
   cursor: pointer;
-  width: 50%;
 }
 
 .relay-team-list--item div {
   display: inline-block;
+}
+
+.save-teams-btn {
+  padding: 15px;
 }
