--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -150,6 +150,13 @@
             </a>
           </li>
 
+          <li class="nav-item">
+            <a href="../../competition_relays_sort/{{competition.id}}/">
+              <span>Настройка эстафет</span>
+              <span class="glyphicon glyphicon-wrench pull-right"></span>
+            </a>
+          </li>
+
           <li class="nav-item bordered-item">
             <a href="#" ng-click="comp.openModalRelay();">
               <span>Перегенерировать эстафетные заплывы</span>
