--- a/pgups/static/css/temp.css
+++ b/pgups/static/css/temp.css
@@ -35,3 +35,62 @@
   width: 10%;
   text-align: center;
 }
+
+.single-competitor-sort {
+  cursor: move;
+}
+
+.relay-start-number {
+  margin-bottom: 0;
+}
+
+.edit-relay-name {
+  margin-bottom: 20px;
+  cursor: pointer;
+  position: relative;
+}
+
+.edit-relay-name .glyphicon-pencil {
+  padding: 3px;
+  border-radius: 3px;
+}
+
+.edit-relay-name .glyphicon-pencil:hover {
+  background-color: #ccc;
+}
+
+.edit-relay-name h4 {
+  line-height: 1.5;
+  min-height: 30px;
+}
+
+.edit-relay-name input {
+  width: 100%;
+  border-radius: 3px;
+  outline: none;
+  line-height: 1.5;
+  border: 1px solid #ccc;
+  padding-right: 30px;
+  padding-left: 5px;
+}
+
+.edit-relay-name .glyphicon-ok {
+  position: absolute;
+  top: 6px;
+  right: 7px;
+  color: green;
+  cursor: pointer;
+}
+
+.single-start-sort {
+  background-color: #f2f2f2;
+}
+
+.single-start-sort.single-start-movable {
+  cursor: move;
+}
+
+.sort-buffer,
+.competitor-list-sort {
+  border-width: 1px;
+}
