--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -108,7 +108,7 @@
 
 					<div class="row" ng-repeat="start in sortCtrl.data.starts_list" ng-show="!$first && start.competitors.length !== 0">
 
-						<div class="single-start-sort col-lg-6 col-md-6">
+						<div class="single-start-sort single-start-movable col-lg-6 col-md-6">
 
 							<!-- Start number -->
 							<div class="start-number">
