--- a/pgups/templates/pgups/competition_starts.html
+++ b/pgups/templates/pgups/competition_starts.html
@@ -4,82 +4,71 @@
 {% load l10n %}
 {% block content %}
 
-<div class="container">
+<div>
+  <!-- Heading -->
+  <div>
+    <a class="decorated-link" href="{% url 'competition' competition_id=competition.id %}">
+      <h1>{{ competition.name|capfirst }}</h1>
+    </a>
+  </div> <!-- End of Heading -->
 
-	<!-- Heading -->
-	<div class="heading heading-no-margin">
-		<a class="decorated-link" href="{% url 'competition' competition_id=competition.id %}">
-			<h1><b>{{competition.name}}</b></h1>
-		</a>
-	</div> <!-- End of Heading -->
+  {% for cdsg in cdsg_list %}
+    <!-- Single discipline -->
+    <div class="single-start-wrapper">
+      <h4>
+        {{cdsg.name}}
+        <a title="Печать результатов" class="waves-effect waves-light btn-floating blue darken-3 right" href="{% url 'cdsg_print' cdsg_id=cdsg.id %}" target="_blank">
+          <i class="material-icons right">print</i>
+        </a>
+      </h4>
 
-	{% for cdsg in cdsg_list %}
+      {% for start in cdsg.start_set.all|dictsort:"num" %}
 
-		<!-- Single discipline -->
-		<div class="single-start-container">
+        <!-- Start number -->
+        <div id="start{{start.num}}">
+          <h5 class="left">Заплыв {{start.num}} ({{start.name}})</h5>
+          {% if user.is_authenticated %}
+            <div class="right">
+              <a title="Редактировать результаты" class="waves-effect waves-light btn-floating blue darken-3" href="{% url 'start_result' start_id=start.id %}"><i class="material-icons right">mode_edit</i></a>
+            </div>
+          {% endif %}
+        </div> <!-- End of Start number -->
 
-			<h2><b>{{cdsg.name}}</b></h2>
+        <table class="table bordered highlight">
+          <thead>
+            <tr>
+              <th>№</th>
+              <th>Участник</th>
+              <th>Команда</th>
+              <th class="center-align">Категория</th>
+              <th class="center-align">Предв. время</th>
+              <th class="center-align">Результат</th>
+            </tr>
+          </thead>
+          <tbody>
+          {% for competitor in start.competitor_set.all %}
+            <tr>
+              <td class="indigo-text text-darken-4">{{competitor.lane}}</td>
+              <td>{{competitor.person.last_name|title}} {{competitor.person.first_name|title}}</td>
+              <td>{{competitor.userrequest.team}}</td>
+              <td class="center-align">{{competitor.age}}</td>
+              <td class="center-align">{{competitor.prior_time|formatSeconds|localize}}</td>
+              <td class="center-align">
+                {% if  competitor.disqualification == 1 %}
+                  {% if competitor.person.gender == 'Ж'%} Не вышла {% else %} Не вышел {% endif %}
+                {% endif %}
+                {% if  competitor.disqualification == 2 %} Фальстарт {% endif %}
+                {% if  competitor.disqualification == 3 %} Нарушение правил поворота {% endif %}
+                {% if  competitor.disqualification == 4 %} Нарушение правил прохождения дистанции {% endif %}
+                {% if  competitor.time > 0 %}<b>{{competitor.time|formatSeconds}}</b>{% endif %}
+              </td>
+            </tr>
+          {% endfor %}
+          </tbody>
+        </table>
+      {% endfor %}
 
-			{% for start in cdsg.start_set.all|dictsort:"num"  %}
-
-				<!-- Start number -->
-				<div class="start-number" id="start{{start.num}}">
-					<h3 class="pull-left">Заплыв {{start.num}} ({{start.name}})</h3>
-					{% if user.is_authenticated %}
-						<a class="btn-results btn-lg pull-right btn btn-info" href="{% url 'start_result' start_id=start.id %}"> <span class="glyphicon glyphicon-pencil"></span> Редактировать результат</a>
-					{% endif %}
-				</div> <!-- End of Start number -->
-
-				<table class="table table-striped table-hover table-bordered">
-					<tbody>
-
-						<tr>
-							<td class="column-lane text-center">№</td>
-							<td class="column-name">Участник</td>
-							<td class="column-team text-center">Команда</td>
-							<td class="column-age text-center">Категория</td>
-							<td class="column-time text-center">Предв. время</td>
-							<td class="column-time text-center">Результат</td>
-						</tr>
-
-					{% for competitor in start.competitor_set.all %}
-
-						<tr>
-							<td class="column-lane text-center">{{competitor.lane}}</td>
-							<td class="column-name">{{competitor.person.last_name|title}} {{competitor.person.first_name|title}}</td>
-							<td class="column-team text-center">{{competitor.userrequest.team}}</td>
-							<td class="column-age text-center">{{competitor.age}}</td>
-							<td class="column-time text-center">{{competitor.prior_time|formatSeconds|localize}}</td>
-							<td class="column-time text-center">
-								{% if  competitor.disqualification == 1 %}
-									{% if competitor.person.gender == 'Ж'%} Не вышла {% else %} Не вышел {% endif %}
-								{% endif %}
-								{% if  competitor.disqualification == 2 %}
-									Фальстарт
-								{% endif %}
-								{% if  competitor.disqualification == 3 %}
-									Нарушение правил поворота
-								{% endif %}
-								{% if  competitor.disqualification == 4 %}
-									Нарушение правил прохождения дистанции
-								{% endif %}
-
-                                {% if  competitor.time > 0%}
-
-                                <b>{{competitor.time|formatSeconds}}</b>
-
-							    {% endif %}</td>
-						</tr>
-					{% endfor %}
-					</tbody>
-				</table>
-
-			{% endfor %}
-            <a class="btn-results btn-lg pull-right btn btn-info" href="{% url 'cdsg_print' cdsg_id=cdsg.id %}" target="_blank"><span class="glyphicon glyphicon-print"></span> Печать результата</a>
-            <br>
-
-		</div> <!-- End of Single discipline -->
-
-	{% endfor %}
+    </div> <!-- End of Single discipline -->
+  {% endfor %}
 </div>
 {% endblock %}
