--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -2,169 +2,165 @@
 {% load staticfiles %}
 {% block content %}
 
-	{% if user.is_authenticated %}
+  {% if user.is_authenticated %}
 
-	<div ng-app="sortableStartsApp" ng-controller="SortController as sortCtrl">
+  <div ng-app="sortableStartsApp" ng-controller="SortController as sortCtrl">
 
-		<input type="hidden" name="csrf_token" ng-init="csrf_token='{{csrf_token}}'" ng-model="csrf_token">
+    <input type="hidden" name="csrf_token" ng-init="csrf_token='{{csrf_token}}'" ng-model="csrf_token">
 
-		<!-- Jumbotron -->
-		<div class="jumbotron">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-11">
-						<a class="decorated-link" href="{% url 'competition' competition_id=competition_id %}">
-							<h1><b>{$ sortCtrl.data.competition_name $}</b></h1>
-						</a>
-						<p class="lead">Ручное создание и сортировка заплывов</p>
-					</div>
-				</div>
-			</div>
-		</div> <!-- End of Jumbotron -->
 
-		<div class="container">
+          <div>
+            <a class="decorated-link" href="{% url 'competition' competition_id=competition_id %}">
+              <h1>{$ sortCtrl.data.competition_name $}</h1>
+            </a>
+            <h5>Ручное создание и сортировка заплывов</h5>
+          </div>
 
-			<!-- DEBUG
-			<input type="checkbox" ng-model="showDebugData"><span> DEBUG: показать данные</span>
-			<p ng-show="showDebugData">{$ sortCtrl.data $}</p>
-			DEBUG -->
 
-			<br>
+    <div>
 
-			<span>Количество дорожек: &nbsp</span>
-			<select class="selectpicker" ng-model="sortCtrl.maxLength" title="">
-				<option value="" selected disabled></option>
-				<option value="5">5</option>
-				<option value="6">6</option>
-			</select>
+      <!-- DEBUG
+      <input type="checkbox" ng-model="showDebugData"><span> DEBUG: показать данные</span>
+      <p ng-show="showDebugData">{$ sortCtrl.data $}</p>
+      DEBUG -->
 
-			<!-- Step 1 -->
-			<div ng-show="sortCtrl.stepCounter.step === 1" class="animation-show-hide">
+      <div class="row">
+        <div class="col s4">
+          <label for="lane-select">Количество дорожек:</label>
+          <select id="lane-select" class="browser-default" ng-model="sortCtrl.maxLength">
+            <option value="5">5</option>
+            <option value="6">6</option>
+          </select>
+        </div>
+      </div>
 
-				<div class="row" ui-sortable="sortCtrl.sortableStartsListOptions" ng-model="sortCtrl.data.starts_list">
+      <!-- Step 1 -->
+      <div ng-show="sortCtrl.stepCounter.step === 1" class="animation-show-hide">
 
-					<div class="sort-buffer-wrapper single-start-sort col-lg-5 col-md-5" ng-repeat-start="start in sortCtrl.data.starts_list" ng-if="$first" fix-on-scroll="fix-to-top">
+        <div class="row" ui-sortable="sortCtrl.sortableStartsListOptions" ng-model="sortCtrl.data.starts_list">
 
-						<div class="connected-competitors sort-buffer" ui-sortable="sortCtrl.sortableStartOptions" ng-model="start.competitors">
+          <div class="sort-buffer-wrapper single-start-sort col-lg-5 col-md-5" ng-repeat-start="start in sortCtrl.data.starts_list" ng-if="$first" fix-on-scroll="fix-to-top">
 
-							<div class="single-competitor-sort" ng-repeat="competitor in start.competitors">
+            <div class="connected-competitors sort-buffer" ui-sortable="sortCtrl.sortableStartOptions" ng-model="start.competitors">
 
-								<div ng-class="{bold: competitor.main_distance}">
-									{$ competitor.last_name | cap $} {$ competitor.first_name | cap $} ({$ competitor.team $})
-								</div>
+              <div class="single-competitor-sort" ng-repeat="competitor in start.competitors">
 
-								<div>
-									{$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
-									<div class="pull-right">{$ competitor.prior_time | time $}</div>
-								</div>
+                <div ng-class="{bold: competitor.main_distance}">
+                  {$ competitor.last_name | cap $} {$ competitor.first_name | cap $} ({$ competitor.team $})
+                </div>
 
-							</div>
-						</div>
+                <div>
+                  {$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
+                  <div class="pull-right">{$ competitor.prior_time | time $}</div>
+                </div>
 
-					</div>
+              </div>
+            </div>
 
-					<div id="start-{$ $index $}" class="single-start-sort sortable-start-list col-lg-offset-6 col-md-offset-6" ng-repeat-end ng-if="!$first">
+          </div>
 
-						<!-- Start number -->
-						<div class="start-number">
-							<h3 class="pull-left">Заплыв {$ $index $}</h3>
-							<button id="remove-start-button-{$ $index $}" class="btn btn-sm btn-danger pull-right remove-start-button" ng-click="sortCtrl.removeStart($index)"><span class="glyphicon glyphicon-remove"></span></button>
-						</div> <!-- End of Start number -->
+          <div id="start-{$ $index $}" class="single-start-sort sortable-start-list col-lg-offset-6 col-md-offset-6" ng-repeat-end ng-if="!$first">
 
-						<div class="connected-competitors competitor-list-sort" ui-sortable="sortCtrl.sortableStartOptions" ng-model="start.competitors">
-							<div class="single-competitor-sort" ng-repeat="competitor in start.competitors">
+            <!-- Start number -->
+            <div class="start-number">
+              <h3 class="pull-left">Заплыв {$ $index $}</h3>
+              <button id="remove-start-button-{$ $index $}" class="btn btn-sm btn-danger pull-right remove-start-button" ng-click="sortCtrl.removeStart($index)"><span class="glyphicon glyphicon-remove"></span></button>
+            </div> <!-- End of Start number -->
 
-								<div ng-class="{bold: competitor.main_distance}">
-									{$ competitor.last_name | cap $} {$ competitor.first_name | cap $} ({$ competitor.team $})
-								</div>
+            <div class="connected-competitors competitor-list-sort" ui-sortable="sortCtrl.sortableStartOptions" ng-model="start.competitors">
+              <div class="single-competitor-sort" ng-repeat="competitor in start.competitors">
 
-								<div>
-									{$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
-									<div class="pull-right">{$ competitor.prior_time | time $}</div>
-								</div>
+                <div ng-class="{bold: competitor.main_distance}">
+                  {$ competitor.last_name | cap $} {$ competitor.first_name | cap $} ({$ competitor.team $})
+                </div>
 
-							</div>
-						</div>
+                <div>
+                  {$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
+                  <div class="pull-right">{$ competitor.prior_time | time $}</div>
+                </div>
 
-					</div>
+              </div>
+            </div>
 
-				</div>
+          </div>
 
-				<div class="row">
-					<div class="col-lg-3 col-md-3">
-						<button id="add-start-button" class="btn btn-lg btn-default button-margin" ng-click="sortCtrl.addStart()"><span class="glyphicon glyphicon-plus"></span> Добавить заплыв</button>
-					</div>
-					<div class="col-lg-3 col-md-4 col-lg-offset-6 col-md-offset-5">
-						<button class="btn btn-lg btn-default button-margin" ng-click="sortCtrl.stepCounter.next()">Перейти к сортировке заплывов <span class="glyphicon glyphicon-chevron-right"></span></button>
-					</div>
-				</div>
+        </div>
 
-			</div> <!-- End of Step 1 -->
+        <div class="row">
+          <div class="col-lg-3 col-md-3">
+            <button id="add-start-button" class="btn btn-lg btn-default button-margin" ng-click="sortCtrl.addStart()"><span class="glyphicon glyphicon-plus"></span> Добавить заплыв</button>
+          </div>
+          <div class="col-lg-3 col-md-4 col-lg-offset-6 col-md-offset-5">
+            <button class="btn btn-lg btn-default button-margin" ng-click="sortCtrl.stepCounter.next()">Перейти к сортировке заплывов <span class="glyphicon glyphicon-chevron-right"></span></button>
+          </div>
+        </div>
 
-			<!-- Step 2 -->
-			<div ng-show="sortCtrl.stepCounter.step === 2" class="animation-show-hide">
+      </div> <!-- End of Step 1 -->
 
-				<div ui-sortable="sortCtrl.sortableStartsListOptions" ng-model="sortCtrl.data.starts_list">
+      <!-- Step 2 -->
+      <div ng-show="sortCtrl.stepCounter.step === 2" class="animation-show-hide">
 
-					<div class="row" ng-repeat="start in sortCtrl.data.starts_list" ng-show="!$first && start.competitors.length !== 0">
+        <div ui-sortable="sortCtrl.sortableStartsListOptions" ng-model="sortCtrl.data.starts_list">
 
-						<div class="single-start-sort single-start-movable col-lg-6 col-md-6">
+          <div class="row" ng-repeat="start in sortCtrl.data.starts_list" ng-show="!$first && start.competitors.length !== 0">
 
-							<!-- Start number -->
-							<div class="start-number">
-								<h3 class="pull-left">Заплыв {$ $index $}</h3>
-							</div> <!-- End of Start number -->
+            <div class="single-start-sort single-start-movable col-lg-6 col-md-6">
 
-							<div ng-model="start.competitors">
-								<div class="single-competitor-sort" ng-repeat="competitor in start.competitors">
-									<div ng-class="{bold: competitor.main_distance}">
-										{$ competitor.last_name | cap $} {$ competitor.first_name | cap $} ({$ competitor.team $})
-									</div>
+              <!-- Start number -->
+              <div class="start-number">
+                <h3 class="pull-left">Заплыв {$ $index $}</h3>
+              </div> <!-- End of Start number -->
 
-									<div>
-										{$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
-										<div class="pull-right">{$ competitor.prior_time | time $}</div>
-									</div>
-								</div>
-							</div>
+              <div ng-model="start.competitors">
+                <div class="single-competitor-sort" ng-repeat="competitor in start.competitors">
+                  <div ng-class="{bold: competitor.main_distance}">
+                    {$ competitor.last_name | cap $} {$ competitor.first_name | cap $} ({$ competitor.team $})
+                  </div>
 
-						</div>
+                  <div>
+                    {$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
+                    <div class="pull-right">{$ competitor.prior_time | time $}</div>
+                  </div>
+                </div>
+              </div>
 
-					</div>
+            </div>
 
-				</div>
+          </div>
 
-				<div class="row">
-					<div class="col-lg-3 col-md-3">
-						<button class="btn btn-lg btn-default button-margin" ng-click="sortCtrl.stepCounter.prev();"><span class="glyphicon glyphicon-chevron-left"></span> Вернуться к распределению участников</button>
-					</div>
-					<div class="col-lg-3 col-md-4 col-lg-offset-6 col-md-offset-5">
-						<button id="submit-request-button" class="btn btn-lg btn-success button-margin" ng-click="sortCtrl.validateStarts();">Сохранить заплывы <span class="glyphicon glyphicon-ok"></span></button>
-					</div>
-				</div>
+        </div>
 
-			</div> <!-- End of Step 2 -->
+        <div class="row">
+          <div class="col-lg-3 col-md-3">
+            <button class="btn btn-lg btn-default button-margin" ng-click="sortCtrl.stepCounter.prev();"><span class="glyphicon glyphicon-chevron-left"></span> Вернуться к распределению участников</button>
+          </div>
+          <div class="col-lg-3 col-md-4 col-lg-offset-6 col-md-offset-5">
+            <button id="submit-request-button" class="btn btn-lg btn-success button-margin" ng-click="sortCtrl.validateStarts();">Сохранить заплывы <span class="glyphicon glyphicon-ok"></span></button>
+          </div>
+        </div>
 
-		</div>
+      </div> <!-- End of Step 2 -->
 
-	</div>
+    </div>
 
-	{% else %}
+  </div>
 
-	<div class="container">
-		<h3 style="margin-top: 20%">
-			<span style="font-size: larger" class="alt-color glyphicon glyphicon-alert"></span> Для просмотра этой страницы необходимо залогиниться.
-		</h3>
-	</div>
+  {% else %}
 
-	{% endif %}
+  <div class="container">
+    <h3 style="margin-top: 20%">
+      <span style="font-size: larger" class="alt-color glyphicon glyphicon-alert"></span> Для просмотра этой страницы необходимо залогиниться.
+    </h3>
+  </div>
+
+  {% endif %}
 
 {% endblock %}
 
 {% block additionaljs %}
-	<link href="{% static 'libs/css/bootstrap-select.min.css' %}" rel="stylesheet"> <!-- Custom select styles -->
-	<script src="{% static 'libs/js/bootstrap-select.min.js' %}"></script> <!-- Custom select JS -->
-	<script src="{% static 'libs/js/angular-animate.min.js' %}"></script> <!-- Angular animations -->
-	<script src="{% static 'libs/js/sortable.min.js' %}"></script> <!-- sortable directive -->
-	<script src="{% static 'js/sortable-starts.js' %}"></script> <!-- SortableStartsApp -->
+  <link href="{% static 'libs/css/bootstrap-select.min.css' %}" rel="stylesheet"> <!-- Custom select styles -->
+  <script src="{% static 'libs/js/bootstrap-select.min.js' %}"></script> <!-- Custom select JS -->
+  <script src="{% static 'libs/js/angular-animate.min.js' %}"></script> <!-- Angular animations -->
+  <script src="{% static 'libs/js/sortable.min.js' %}"></script> <!-- sortable directive -->
+  <script src="{% static 'js/sortable-starts.js' %}"></script> <!-- SortableStartsApp -->
 {% endblock %}
