--- a/pgups/templates/pgups/start_result.html
+++ b/pgups/templates/pgups/start_result.html
@@ -2,79 +2,90 @@
 {% load staticfiles %}
 {% block content %}
 
-<div class="container">
 
-	<div class="row">
+  <div class="row">
+    <!-- Heading -->
+    <div class="heading">
+      <a class="decorated-link" href="{% url 'competition_starts' competition_id=competition_id %}#start{{start_num}}">
+        <h4>Список заплывов</h4>
+      </a>
+    </div> <!-- End of Heading -->
 
-		<!-- Heading -->
-		<div class="heading">
-			<a class="decorated-link" href="{% url 'competition_starts' competition_id=competition_id %}#start{{start_num}}">
-				<h1><b>Список заплывов</b></h1>
-			</a>
-		</div> <!-- End of Heading -->
+    <!-- Start number -->
+    <div class="start-number">
+      <h5 class="pull-left">Заплыв {{start_num}} ({{cdsg_name}})</h5>
+    </div> <!-- End of Start number -->
 
-		<!-- Start number -->
-		<div class="start-number">
-			<h3 class="pull-left">Заплыв {{start_num}} ({{cdsg_name}})</h3>
-			<!--<a class="btn-results btn-lg btn btn-info pull-right" href="../../starts/{{competition_id}}/">Все старты</a>-->
-		</div> <!-- End of Start number -->
+    <form role="form" method="POST">{% csrf_token %}
 
-		<form role="form" method="POST">{% csrf_token %}
+    {{ result_formset.management_form }}
 
-		{{ result_formset.management_form }}
+      <table class="table bordered highlight">
+        <thead>
+          <tr>
+            <th>№</th>
+            <th>Участник</th>
+            <th>Команда</th>
+            <th class="center-align">Категория</th>
+            <th class="center-align">Результат</th>
+            <th class="center-align">Дисквалиф.</th>
+          </tr>
+        </thead>
 
-			<table class="table table-striped table-hover table-bordered">
-				<tbody>
+        <tbody>
+        {% for result_form in result_formset %}
+          {{result_form.id}}
 
-					<tr>
-						<td class="column-lane text-center light-blue-background">№</td>
-						<td class="column-name-narrow light-blue-background">Участник</td>
-						<td class="column-team text-center light-blue-background">Команда</td>
-						<td class="column-age text-center light-blue-background">Категория</td>
-						<td class="column-result-start padding-15 text-center light-blue-background">Результат</td>
-						<td class="column-disqualified padding-15 text-center light-blue-background">Дисквалиф.</td>
-					</tr>
+          <tr>
+            <td>{{result_form.instance.lane}}</td>
+            <td>{{result_form.instance.person.last_name|title}} {{result_form.instance.person.first_name|title}}</td>
+            <td>{{result_form.instance.userrequest.team}}</td>
+            <td class="center-align">{{result_form.instance.age}}</td>
+            <td class="center-align col-result">
+              <div class="row row-no-margin">
+                {{ result_form.time }}
+              </div>
+            </td>
+            <td class="center-align input-field">
+              {{result_form.disqualification}}
 
-				{% for result_form in result_formset %}
-					{{result_form.id}}
+            </td>
+          </tr>
 
-					<tr>
-						<td class="column-lane text-center light-blue-background">{{result_form.instance.lane}}</td>
-						<td class="column-name-narrow">{{result_form.instance.person.last_name|title}} {{result_form.instance.person.first_name|title}}</td>
-						<td class="column-team text-center">{{result_form.instance.userrequest.team}}</td>
-						<td class="column-age text-center">{{result_form.instance.age}}</td>
-						<td class="column-result-start">{{result_form.time}}</td>
-						<td class="column-disqualified text-center">{{result_form.disqualification}}</td>
-					</tr>
+        {% endfor %}
 
-				{% endfor %}
+        </tbody>
+      </table>
 
-				</tbody>
-			</table>
+      <div class="button-wrapper">
+        <button class="waves-effect waves-light btn right blue darken-3" type="submit">Сохранить результат</button>
+      </div>
+    </form>
 
-			<button class="btn btn-success btn-lg pull-right" type="submit"><span class="glyphicon glyphicon-ok"></span> Сохранить результат</button>
+  </div>
 
-		</form>
+  <div class="row">
 
-	</div>
+    <hr>
 
-	<div class="row">
+    <div class="button-wrapper">
+    {% if prev_start_id %}
+      <a class="waves-effect waves-light btn left blue darken-3" href="../../start_result/{{prev_start_id}}/">
+        Предыдущий заплыв
+      </a>
+    {% endif %}
 
-		<hr>
+    {% if next_start_id %}
+      <a class="waves-effect waves-light btn right blue darken-3" href="../../start_result/{{next_start_id}}/">
+        Следующий заплыв
+      </a>
+    {% endif %}
+    </div>
+  </div>
 
-		{% if prev_start_id %}
-			<a class="btn btn-lg btn-primary pull-left" href="../../start_result/{{prev_start_id}}/">
-				<span class="glyphicon glyphicon-chevron-left"></span> Предыдущий заплыв
-			</a>
-		{% endif %}
-
-		{% if next_start_id %}
-			<a class="btn btn-lg btn-primary pull-right" href="../../start_result/{{next_start_id}}/">
-				Следующий заплыв <span class="glyphicon glyphicon-chevron-right"></span>
-			</a>
-		{% endif %}
-
-	</div>
-
-</div>
+<script>
+  $(document).ready(function() {
+    $('select').material_select();
+  });
+</script>
 {% endblock %}
