--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -5,86 +5,88 @@
 
 <!-- Notie messages -->
 {% for message in messages %}
-	<script src="{% static 'js/notie.min.js' %}"></script>
-	<script> notie.alert(1, 'Изменения сохранены', 0.5); </script>
+  <script src="{% static 'libs/js/notie.min.js' %}"></script>
+  <script> notie.alert(1, 'Изменения сохранены', 0.5); </script>
 {% endfor %}
 
-<div class="container">
+<div>
+  <!-- Heading -->
+  <div class="heading">
+    <a class="decorated-link" href="/competition/{{ userrequest.competition.id }}/">
+      <h1>{{ userrequest.competition.name|capfirst }}</h1>
+    </a>
 
-	<!-- Heading -->
-	<div class="heading">
+    <h4>
+      {% if userrequest.team %}
+      Заявка команды "{{userrequest.team}}", {{userrequest.representative}}
+      {% else %}
+      Индивидуальная заявка
+      {% endif %}
+       ({{userrequest.date|date:"d.m.Y"}})
+    </h4>
+  </div> <!--End of Heading -->
 
-		<a class="decorated-link" href="/competition/{{ userrequest.competition.id }}/">
-			<h1><b>{{ userrequest.competition.name }}</b></h1>
-		</a>
+    {% if user.is_authenticated %}
+    <form role="form" method="POST">{% csrf_token %}
 
-		<h2><b>
-			{% if userrequest.team %}
-			Заявка команды "{{userrequest.team}}", {{userrequest.representative}}
-			{% else %}
-			Индивидуальная заявка
-			{% endif %}
-			 ({{userrequest.date|date:"d.m.Y"}})
-		</b></h2>
-	</div> <!--End of Heading -->
+    {{ competitor_formset.management_form }}
 
-	<h3>Участники:</h3>
+      <table class="table highlight bordered">
+        <thead>
+          <tr>
+            <th class="column-name">Участник</td>
+            <th class="column-tour">Дистанция</td>
+            <th class="column-approved">Подтверждение</td>
+          </tr>
+        </thead>
 
-		{% if user.is_authenticated %}<form role="form" method="POST">{% csrf_token %}
+        <tbody>
+        {% for competitor_form in competitor_formset %}
+          {{competitor_form.id}}
+          <tr>
+            <td class="column-name">
+              <span{% if competitor_form.instance.main_distance %} style="font-weight: bold" {% endif %}>
+                {{competitor_form.instance.person.last_name|title}} {{competitor_form.instance.person.first_name|title}}
+              </span>
+              {{competitor_form.instance.person.birth_year}} г.р.
+              ({{competitor_form.instance.age.name}} лет {{competitor_form.instance.person.gender}})
+              {% if competitor_form.instance.tour.out %}В/К{% endif %}
+              <a href="{% url 'regrequest' userrequest_id=userrequest.id %}/">(Редактировать)</a>
+            </td>
+            <td class="column-tour">
+              <span {% if competitor_form.instance.main_distance%} style="font-weight: bold" {% endif %}>
+              {{competitor_form.instance.tour.style.name}} {{competitor_form.instance.tour.distance.name}} ({{competitor_form.instance.prior_time|formatSeconds}})
+              </span>
+            </td>
+            <td class="column-approved center-align">
+              {{competitor_form.approved}}
+              <label for="{{ competitor_form.approved.id_for_label }}"></label>
+            </td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+      <div class="button-wrapper">
+        <a href="{% url 'regrequest' userrequest_id=userrequest.id %}/" class="waves-effect waves-light btn left blue darken-3">
+          Редактировать заявку <i class="material-icons right">mode_edit</i>
+        </a>
+        <button class="waves-effect waves-light btn right blue darken-3" type="submit">
+          Сохранить изменения <i class="material-icons right">done</i>
+        </button>
+      </div>
+    </form>
 
-		{{ competitor_formset.management_form }}
-
-			<table class="table table-striped table-hover table-bordered">
-
-				<tr>
-					<td class="column-name light-blue-background"><b>Участник</b></td>
-					<td class="column-tour padding-15 light-blue-background"><b>Дистанция</b></td>
-					<td class="column-approved padding-15 light-blue-background"><b>Подтверждение</b></td>
-				</tr>
-
-				<tbody>
-				{% for competitor_form in competitor_formset %}
-					{{competitor_form.id}}
-
-					<tr>
-						<td class="column-name">
-							{% if competitor_form.instance.main_distance%}<span><b>{% endif %}
-							{{competitor_form.instance.person.last_name|title}} {{competitor_form.instance.person.first_name|title}}
-							{% if competitor_form.instance.main_distance%}</b></span>{% endif %}
-                            {{competitor_form.instance.person.birth_year}} г.р.
-                            ({{competitor_form.instance.age.name}} лет {{competitor_form.instance.person.gender}})
-							{% if competitor_form.instance.tour.out %}В/К{% endif %}
-							<a href="{% url 'regrequest' userrequest_id=userrequest.id %}/">(Редактировать)</a>
-						</td>
-						<td class="column-tour padding-15">
-							{% if competitor_form.instance.main_distance%}<span><b>{% endif %}
-							{{competitor_form.instance.tour.style.name}} {{competitor_form.instance.tour.distance.name}} ({{competitor_form.instance.prior_time|formatSeconds}})
-							{% if competitor_form.instance.main_distance%}</b></span>{% endif %}
-						</td>
-						<td class="column-approved padding-15 text-center">{{competitor_form.approved}}</td>
-					</tr>
-
-				{% endfor %}
-
-				</tbody>
-			</table>
-			<div class="userrequest-button-wrapper">
-				<a href="{% url 'regrequest' userrequest_id=userrequest.id %}/" class="btn btn-lg btn-default pull-left"><span class="glyphicon glyphicon-pencil"></span> Редактировать заявку</a>
-				<button class="btn btn-lg btn-success pull-right" type="submit">Сохранить изменения <span class="glyphicon glyphicon-ok"></span></button>
-			</div>
-		</form>
-
-			{% else %}
-			<table class="table table-striped table-hover table-bordered">
-                {% for person in persons %}
-				<tr>
-					<td>
-						{{person.last_name|title}} {{person.first_name|title}}
-					</td>
-				</tr>
-                {% endfor %}
-			</table>
-			{% endif %}
+      {% else %}
+      <table class="table highlight bordered">
+        {% for person in persons %}
+        <tr>
+          <td>
+            {{person.last_name|title}} {{person.first_name|title}}
+          </td>
+        </tr>
+        {% endfor %}
+      </table>
+      {% endif %}
 </div>
 
 {% endblock %}
